fea:1,logout func is included;2,cors is included
